--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,6 @@ dependencies {
     compile 'com.tbruyelle.rxpermissions:rxpermissions:' + rootProject.rxpermissionsLibVersion
 }
 
+apply from: "https://raw.githubusercontent.com/aaironman/KUtils/master/bintrayUpload.gradle"
+
 //https://github.com/panpf/android-library-publish-to-jcenter jcenter上传方法
