--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.6.0'
-        classpath 'me.tatarka:gradle-retrolambda:3.2.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.2'
+        classpath 'me.tatarka:gradle-retrolambda:3.2.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,6 +18,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
@@ -26,7 +27,7 @@ ext {
     buildToolsVersion = "25.0.1"
     applicationId = "com.ironman.kutils"
     minSdkVersion = 14
-    targetSdkVersion = 25
+    targetSdkVersion = 21
     versionCode = 1
     versionName = "1.0.0"
     supportLibVersion = "25.3.0"
