--- a/build.gradle
+++ b/build.gradle
@@ -42,5 +42,7 @@ ext {
     swipebackhelperLibVersion = "3.1.2"
     glideLibVersion = "3.8.0"
     rxpermissionsLibVersion = "0.9.2@aar"
+    pagerslidingtabstripLibVersion = "1.0.1"
+    ultraPtrLibVersion = "1.0.11"
 }
 
