--- a/build.gradle
+++ b/build.gradle
@@ -44,5 +44,6 @@ ext {
     rxpermissionsLibVersion = "0.9.2@aar"
     pagerslidingtabstripLibVersion = "1.0.1"
     ultraPtrLibVersion = "1.0.11"
+    bannerLibVersion = "1.4.10"
 }
 
