知乎日报-主题

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,17 @@ android {
     lintOptions {
         abortOnError false
     }
+
+    configurations.all {
+        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+            def requested = details.requested
+            if (requested.group == 'com.android.support') {
+                if (!requested.name.startsWith("multidex")) {
+                    details.useVersion '25.3.0'
+                }
+            }
+        }
+    }
 }
 
 dependencies {
@@ -50,6 +61,8 @@ dependencies {
     compile 'com.astuetz:pagerslidingtabstrip:' + rootProject.pagerslidingtabstripLibVersion
     compile 'in.srain.cube:ultra-ptr:' + rootProject.ultraPtrLibVersion
     compile 'com.youth.banner:banner:' + rootProject.bannerLibVersion
+    compile 'jp.wasabeef:glide-transformations:' + rootProject.glideTransformationsLibVersion
+    compile 'com.yanzhenjie:recyclerview-swipe:' + rootProject.recyclerviewSwipeLibVersion
 }
 
 //apply from: "https://raw.githubusercontent.com/aaironman/KUtils/master/bintrayUpload.gradle"
